--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "csurf": "^1.11.0",
