update the image

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,96 @@ typings/
 *.code-workspace
 .DS_Store
 
+Python/Neural_Network_launch_data.ipynb
+Python/Query_weather_data.ipynb
+Python/Screen Recording 2024-08-17 at 4.04.06 PM.mov
+Python/Screen Recording 2024-08-17 at 4.19.54 PM.mp4
+Python/Universal Launch App.docx
+Python/weather_data_entry_field.txt
+Python/weather_Data.ipynb
+Python/weather_python_code.ipynb
+Python/weatherdatamodel.h5
+Python/weatherdatamodel.sav
+admin/.angular/cache/17.3.8/admin/.tsbuildinfo
+admin/.angular/cache/17.3.8/vite/deps/_metadata.json
+admin/.angular/cache/17.3.8/vite/deps/@angular_common_http.js
+admin/.angular/cache/17.3.8/vite/deps/@angular_common_http.js.map
+admin/.angular/cache/17.3.8/vite/deps/@angular_common.js
+admin/.angular/cache/17.3.8/vite/deps/@angular_common.js.map
+admin/.angular/cache/17.3.8/vite/deps/@angular_core.js
+admin/.angular/cache/17.3.8/vite/deps/@angular_core.js.map
+admin/.angular/cache/17.3.8/vite/deps/@angular_forms.js
+admin/.angular/cache/17.3.8/vite/deps/@angular_forms.js.map
+admin/.angular/cache/17.3.8/vite/deps/@angular_google-maps.js
+admin/.angular/cache/17.3.8/vite/deps/@angular_google-maps.js.map
+admin/.angular/cache/17.3.8/vite/deps/@angular_material_card.js
+admin/.angular/cache/17.3.8/vite/deps/@angular_material_card.js.map
+admin/.angular/cache/17.3.8/vite/deps/@angular_material_grid-list.js
+admin/.angular/cache/17.3.8/vite/deps/@angular_material_grid-list.js.map
+admin/.angular/cache/17.3.8/vite/deps/@angular_platform-browser_animations_async.js
+admin/.angular/cache/17.3.8/vite/deps/@angular_platform-browser_animations_async.js.map
+admin/.angular/cache/17.3.8/vite/deps/@angular_platform-browser.js
+admin/.angular/cache/17.3.8/vite/deps/@angular_platform-browser.js.map
+admin/.angular/cache/17.3.8/vite/deps/@angular_router.js
+admin/.angular/cache/17.3.8/vite/deps/@angular_router.js.map
+admin/.angular/cache/17.3.8/vite/deps/browser-MOXDOVDW.js
+admin/.angular/cache/17.3.8/vite/deps/browser-MOXDOVDW.js.map
+admin/.angular/cache/17.3.8/vite/deps/chunk-2CRJBFL5.js
+admin/.angular/cache/17.3.8/vite/deps/chunk-2CRJBFL5.js.map
+admin/.angular/cache/17.3.8/vite/deps/chunk-E2AHHZ2G.js
+admin/.angular/cache/17.3.8/vite/deps/chunk-E2AHHZ2G.js.map
+admin/.angular/cache/17.3.8/vite/deps/chunk-FBFHMMPR.js
+admin/.angular/cache/17.3.8/vite/deps/chunk-FBFHMMPR.js.map
+admin/.angular/cache/17.3.8/vite/deps/chunk-G67N7OZ5.js
+admin/.angular/cache/17.3.8/vite/deps/chunk-G67N7OZ5.js.map
+admin/.angular/cache/17.3.8/vite/deps/chunk-J4B6MK7R.js
+admin/.angular/cache/17.3.8/vite/deps/chunk-J4B6MK7R.js.map
+admin/.angular/cache/17.3.8/vite/deps/chunk-U6TKXJIT.js
+admin/.angular/cache/17.3.8/vite/deps/chunk-U6TKXJIT.js.map
+admin/.angular/cache/17.3.8/vite/deps/chunk-XGBQKKT7.js
+admin/.angular/cache/17.3.8/vite/deps/chunk-XGBQKKT7.js.map
+admin/.angular/cache/17.3.8/vite/deps/package.json
+admin/.angular/cache/17.3.8/vite/deps/three_examples_jsm_controls_OrbitControls__js.js
+admin/.angular/cache/17.3.8/vite/deps/three_examples_jsm_controls_OrbitControls__js.js.map
+admin/.angular/cache/17.3.8/vite/deps/three_examples_jsm_loaders_GLTFLoader__js.js
+admin/.angular/cache/17.3.8/vite/deps/three_examples_jsm_loaders_GLTFLoader__js.js.map
+admin/.angular/cache/17.3.8/vite/deps/three.js
+admin/.angular/cache/17.3.8/vite/deps/three.js.map
+admin/.vscode/extensions.json
+admin/.vscode/launch.json
+admin/.vscode/tasks.json
+admin/dist/admin/3rdpartylicenses.txt
+admin/dist/admin/Archive.zip
+admin/dist/admin/prerendered-routes.json
+admin/dist/admin/browser/chunk-2CUVJ3GT.js
+admin/dist/admin/browser/chunk-6DQ3S5EC.js
+admin/dist/admin/browser/favicon.ico
+admin/dist/admin/browser/index.html
+admin/dist/admin/browser/main-FACWC7BM.js
+admin/dist/admin/browser/polyfills-SCHOHYNV.js
+admin/dist/admin/browser/styles-IHLR3ZBD.css
+admin/dist/admin/browser/about/index.html
+admin/dist/admin/browser/contact/index.html
+admin/dist/admin/browser/map/index.html
+admin/dist/admin/browser/media/Falcon-3-Image-26JPQUGJ.jpg
+admin/dist/admin/browser/threed/index.html
+admin/dist/admin/server/chunk-6IVWP57A.mjs
+admin/dist/admin/server/chunk-CYBZC7KC.mjs
+admin/dist/admin/server/chunk-O73ZHKXN.mjs
+admin/dist/admin/server/chunk-SRJPAYGQ.mjs
+admin/dist/admin/server/chunk-TWBVOISQ.mjs
+admin/dist/admin/server/chunk-VVCT4QZE.mjs
+admin/dist/admin/server/index.server.html
+admin/dist/admin/server/main.server.mjs
+admin/dist/admin/server/polyfills.server.mjs
+admin/dist/admin/server/render-utils.server.mjs
+admin/dist/admin/server/server.mjs
+admin/src/app/map/map.module.ts
+admin/src/app/map/map.service.spec.ts
+admin/src/app/map/map.service.ts
+admin/src/app/map/map/map.component.css
+admin/src/app/map/map/map.component.html
+admin/src/app/map/map/map.component.spec.ts
+admin/src/app/map/map/map.component.ts
+admin/src/app/threed/threedlist/render.txt
+admin/src/assets/rocket3d.glb
