--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,14 @@ typings/
 *.code-workspace
 .DS_Store
 
+Python/Neural_Network_launch_data.ipynb
+Python/Query_weather_data.ipynb
+Python/Screen Recording 2024-08-17 at 4.04.06 PM.mov
+Python/Screen Recording 2024-08-17 at 4.19.54 PM.mp4
+Python/Universal Launch App.docx
+Python/weather_data_entry_field.txt
+Python/weather_Data.ipynb
+Python/weather_python_code.ipynb
+Python/weatherdatamodel.h5
+Python/weatherdatamodel.sav
+admin/*
